S03Lecture10 Accessing Object Names, Using pointers 25.10.2017

--- a/EscapeRoom/Config/DefaultGame.ini
+++ b/EscapeRoom/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F8A3D786402247E47C0C268ECD6BF98A
+CompanyName=FirmeNema
+CompanyDistinguishedName=FirmeNema
+CopyrightNotice=nemozenitkodirnitovo
 
 [StartupActions]
 bAddPacks=True
