--- a/EscapeRoom/Config/DefaultInput.ini
+++ b/EscapeRoom/Config/DefaultInput.ini
@@ -60,11 +60,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Grab",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Grab",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Grab",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Grab",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Grab",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Grab",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Grab",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=-1.000000)
 -AxisMappings=(AxisName="LookUpRate",Key=Gamepad_RightY,Scale=1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
