--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
+##########################
+# Unreal Generated Files #
+##########################
 */Binaries/
 */Build/
 */DerivedDataCache
 */Intermediate/
 */Saved/
 
+######################
+# VS Generated Files #
+######################
 *.VC.db
 EscapeRoom/Content/StarterContent/
 */.vs/
+*.suo
+
